--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 # 大模型API客户端
 openai>=1.0.0
 anthropic>=0.5.0
-google-generativeai>=0.3.0
+google-generativeai>=0.1.0rc1; python_version < '3.9'
+google-generativeai>=0.3.0; python_version >= '3.9'
 
 # 图像处理
 pillow>=9.0.0
